<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/reset_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF5FB"
    android:padding="24dp">

    <ImageView
        android:id="@+id/logo2"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:src="@drawable/logosplash"
        android:contentDescription="@string/logo_content_desc"
        tools:ignore="Typos"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_title2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crear_title"
        android:textStyle="bold"
        android:textColor="#333333"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/logo2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/etPass1"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:hint="@string/hint_pass1"
        android:backgroundTint="#A0B9F5"
        android:inputType="textPassword"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/tv_title2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/etPass2"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:hint="@string/hint_pass2"
        android:backgroundTint="#A0B9F5"
        android:inputType="textPassword"
        android:imeOptions="actionDone"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/etPass1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCrear"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:text="@string/btn_crear"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:backgroundTint="#8DAEE1"
        app:layout_constraintTop_toBottomOf="@id/etPass2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>